/* Large: 992px - 1199px */
Responsive

--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
             <div class="header__offer-wrapper">
                 <div class="offer">
                     <h1 class="offer__title">
-                        Become a superhero and join the best of SEVEN
+                        Become a superhero and<br>join the best of SEVEN
                     </h1>
                     <p class="offer__text">
                         From the world of "The Boys" comes "Gen V," which explores the first
