--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
             <div class="header__offer-wrapper">
                 <div class="offer">
                     <h1 class="offer__title">
-                        Become a superhero and<br>join the best of SEVEN
+                        Become a superhero and join the best of SEVEN
                     </h1>
                     <p class="offer__text">
                         From the world of "The Boys" comes "Gen V," which explores the first
@@ -136,12 +136,12 @@
                 Trusted by the best
             </div>
             <div class="trusted__brand-icons">
-                <a href="#"><img src="./img/1.png" alt="Stole Bucks Coffe" class="trusted__icon1"></a>
-                <a href="#"><img src="./img/2nike.png" alt="Nike Fun" class="trusted__icon2"></a>
-                <a href="#"><img src="./img/3.png" alt="Vkusno i tochka" class="trusted__icon3"></a>
-                <a href="#"><img src="./img/4levis.png" alt="Levis Fun" class="trusted__icon4"></a>
-                <a href="#"><img src="./img/5.png" alt="Puma Fun" class="trusted__icon5"></a>
-                <a href="#"><img src="./img/6.png" alt="Tomato King" class="trusted__icon6"></a>
+                <a href="#"><img src="./img/1.png" alt="Stole Bucks Coffe" class="trusted__icon"></a>
+                <a href="#"><img src="./img/2nike.png" alt="Nike Fun" class="trusted__icon"></a>
+                <a href="#"><img src="./img/3.png" alt="Vkusno i tochka" class="trusted__icon"></a>
+                <a href="#"><img src="./img/4levis.png" alt="Levis Fun" class="trusted__icon"></a>
+                <a href="#"><img src="./img/5.png" alt="Puma Fun" class="trusted__icon"></a>
+                <a href="#"><img src="./img/6.png" alt="Tomato King" class="trusted__icon"></a>
 
             </div>
         </div>
@@ -155,10 +155,14 @@
                         GEN V
                     </div>
                 </div>
-                <p class="footer__copyright">
-                    2012 - 2035 © Gen V
-                </p>
-                <p class="footer__privacy">Privacy policy</p>
+                <div class="footer__copy-and-privacy">
+                    <p class="footer__copyright">
+                        2012 - 2035 © Gen V
+                    </p>
+                    <p class="footer__privacy">
+                        Privacy policy
+                    </p>
+                </div>
             </div>
             <ul class="menu">
                 <li class="menu__item">
@@ -183,16 +187,22 @@
                 </a>
             </div>
             <div class="footer__contacts">
-                <a href="#" class="footer__phone-number">
-                    +1 (800) 315-5939
-                </a>
-                <a href="#" class="footer__email">
-                    hello@Gen V.com
-                </a>
-                <p class="footer__login">Login</p>
-                <p class="footer__create">Create an account</p>
+                <div class="footer__contacts-wrapper"> <a href="#" class="footer__phone-number">
+                        +1 (800) 315-5939
+                    </a>
+                    <a href="#" class="footer__email">
+                        hello@Gen V.com
+                    </a>
+                </div>
+                <div class="footer__sign-in">
+                    <p class="footer__login">
+                        Login
+                    </p>
+                    <p class="footer__create">
+                        Create an account
+                    </p>
+                </div>
             </div>
-
         </div>
     </footer>
 </body>
