tag title edits

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     </header>
     <section class="services" id="services">
         <div class="container container_services">
-            <div class="services__title">
+            <h2 class="services__title">
                 What we provide
-            </div>
+            </h2>
             <div class="services__cards">
                 <div class="card">
                     <img src="./img/arm.svg" alt="Arm" class="card__img">
@@ -130,9 +130,9 @@
     </section>
     <section class="trusted" id="trusted">
         <div class="container">
-            <div class="trusted__title">
+            <h2 class="trusted__title">
                 Trusted by the best
-            </div>
+            </h2>
             <div class="trusted__brand-icons">
                 <a href="#"><img src="./img/1.png" alt="Stole Bucks Coffe" class="trusted__icon"></a>
                 <a href="#"><img src="./img/2nike.png" alt="Nike Fun" class="trusted__icon"></a>
